# equation

./: .gitignore  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  test.cpp
gui/: Block.h  CMakeLists.txt  CropRegion.h  FrameView.cpp  FrameView.h  MainWidget.cpp  MainWidget.h  gui.cpp  gui.h  gui.ui
